# category

./: .env  db.sqlite3  docker-compose.yaml  dockerfile  entrypoint.sh  main.py  pyproject.toml  render.yaml
app/: admin.py  apps.py  models.py  permissions.py  serializers.py  urls.py  views.py
app/migrations/: 0001_initial.py
core/: settings.py  urls.py
